finally fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,12 @@
 }
 
 html, body {
-  width:100%; 
+  min-width:100%; 
   height:100%; 
-  overflow-y:hidden;
-  overflow-x:hidden;
+}
+
+.page {
+  overflow: hidden;
 }
 
 .welcome {
